--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 15:05:02 2018</p>
+         Last Run: Thu Nov 22 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -31,34 +31,34 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Overcast</td>
-                        <td>-2</td>
-                        <td>-5</td>
+                        <td>-3</td>
+                        <td>-6</td>
                         <td>5</td>
                         <td>76</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>S</td>
-                        <td>82</td>
+                        <td>SSE</td>
+                        <td>81</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>-1</td>
-                        <td>-4</td>
-                        <td>5</td>
+                        <td>-2</td>
+                        <td>-6</td>
+                        <td>4</td>
                         <td>71</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>S</td>
+                        <td>SSE</td>
                         <td>70</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>0</td>
-                        <td>-3</td>
+                        <td>-1</td>
+                        <td>-4</td>
                         <td>4</td>
-                        <td>67</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
@@ -69,12 +69,12 @@
                         <td>Partly Cloudy</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>5</td>
+                        <td>4</td>
                         <td>69</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>47</td>
+                        <td>48</td>
                      </tr>
                   </tbody>
                </table>
@@ -102,9 +102,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-5",
+                 "-6",
+                 "-6",
                  "-4",
-                 "-3",
                  "-4"
                ]
              },
@@ -115,9 +115,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
+                 "-3",
                  "-2",
                  "-1",
-                 "0",
                  "-1"
                ]
              }
@@ -177,9 +177,9 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "5",
-                 "5",
                  "4",
-                 "5"
+                 "4",
+                 "4"
                ]
              },
              {
@@ -190,7 +190,7 @@
                "data":[
                  "76",
                  "71",
-                 "67",
+                 "68",
                  "69"
                ]
              },
@@ -200,10 +200,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "82",
+                 "81",
                  "70",
                  "58",
-                 "47"
+                 "48"
                ]
              }
            ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 15:05:02 2018</p>
+         Last Run: Thu Nov 22 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -267,8 +267,8 @@
                         <td>Partly Cloudy</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>2</td>
-                        <td>56</td>
+                        <td>1</td>
+                        <td>55</td>
                         <td>1</td>
                         <td>8</td>
                         <td>W</td>
@@ -284,7 +284,7 @@
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>48</td>
+                        <td>47</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -296,7 +296,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>49</td>
+                        <td>48</td>
                      </tr>
                   </tbody>
                </table>
@@ -394,7 +394,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
+                 "1",
                  "2",
                  "2"
                ]
@@ -405,7 +405,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "56",
+                 "55",
                  "52",
                  "51"
                ]
@@ -417,8 +417,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "50",
-                 "48",
-                 "49"
+                 "47",
+                 "48"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 15:05:02 2018</p>
+         Last Run: Thu Nov 22 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -499,7 +499,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SSW</td>
-                        <td>77</td>
+                        <td>78</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -507,11 +507,11 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>6</td>
-                        <td>89</td>
+                        <td>88</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>84</td>
+                        <td>86</td>
                      </tr>
                   </tbody>
                </table>
@@ -622,7 +622,7 @@
                "data":[
                  "83",
                  "86",
-                 "89"
+                 "88"
                ]
              },
              {
@@ -632,8 +632,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "67",
-                 "77",
-                 "84"
+                 "78",
+                 "86"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 15:05:02 2018</p>
+         Last Run: Thu Nov 22 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -698,11 +698,11 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>13</td>
-                        <td>89</td>
+                        <td>88</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SSW</td>
-                        <td>85</td>
+                        <td>84</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -722,11 +722,11 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>8</td>
-                        <td>92</td>
+                        <td>91</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
-                        <td>82</td>
+                        <td>81</td>
                      </tr>
                   </tbody>
                </table>
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "89",
+                 "88",
                  "90",
-                 "92"
+                 "91"
                ]
              },
              {
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "85",
+                 "84",
                  "83",
-                 "82"
+                 "81"
                ]
              }
            ]
