--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 20:05:06 2018</p>
+         Last Run: Thu Nov 22 21:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -34,23 +34,23 @@
                         <td>-2</td>
                         <td>-5</td>
                         <td>5</td>
-                        <td>77</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>SSE</td>
-                        <td>80</td>
+                        <td>S</td>
+                        <td>82</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>4</td>
-                        <td>71</td>
+                        <td>5</td>
+                        <td>73</td>
                         <td>1</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>66</td>
+                        <td>72</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -58,23 +58,23 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>4</td>
-                        <td>67</td>
+                        <td>70</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>S</td>
-                        <td>53</td>
+                        <td>59</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>0</td>
-                        <td>-3</td>
-                        <td>4</td>
-                        <td>69</td>
+                        <td>-1</td>
+                        <td>-4</td>
+                        <td>5</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>41</td>
+                        <td>49</td>
                      </tr>
                   </tbody>
                </table>
@@ -105,7 +105,7 @@
                  "-5",
                  "-4",
                  "-4",
-                 "-3"
+                 "-4"
                ]
              },
              {
@@ -118,7 +118,7 @@
                  "-2",
                  "-1",
                  "-1",
-                 "0"
+                 "-1"
                ]
              }
            ]
@@ -177,9 +177,9 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "5",
+                 "5",
                  "4",
-                 "4",
-                 "4"
+                 "5"
                ]
              },
              {
@@ -188,10 +188,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "77",
-                 "71",
-                 "67",
-                 "69"
+                 "78",
+                 "73",
+                 "70",
+                 "72"
                ]
              },
              {
@@ -200,10 +200,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "80",
-                 "66",
-                 "53",
-                 "41"
+                 "82",
+                 "72",
+                 "59",
+                 "49"
                ]
              }
            ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 20:05:06 2018</p>
+         Last Run: Thu Nov 22 21:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -265,22 +265,22 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>1</td>
-                        <td>-2</td>
-                        <td>1</td>
-                        <td>57</td>
+                        <td>0</td>
+                        <td>-3</td>
+                        <td>2</td>
+                        <td>59</td>
                         <td>1</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>57</td>
+                        <td>56</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>2</td>
                         <td>0</td>
-                        <td>1</td>
-                        <td>53</td>
+                        <td>2</td>
+                        <td>55</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -292,10 +292,10 @@
                         <td>2</td>
                         <td>0</td>
                         <td>2</td>
-                        <td>53</td>
+                        <td>55</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>SW</td>
+                        <td>6</td>
+                        <td>WSW</td>
                         <td>61</td>
                      </tr>
                   </tbody>
@@ -323,7 +323,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-2",
+                 "-3",
                  "0",
                  "0"
                ]
@@ -335,7 +335,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "1",
+                 "0",
                  "2",
                  "2"
                ]
@@ -394,8 +394,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "1",
-                 "1",
+                 "2",
+                 "2",
                  "2"
                ]
              },
@@ -405,9 +405,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "57",
-                 "53",
-                 "53"
+                 "59",
+                 "55",
+                 "55"
                ]
              },
              {
@@ -416,7 +416,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "57",
+                 "56",
                  "60",
                  "61"
                ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 20:05:06 2018</p>
+         Last Run: Thu Nov 22 21:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -499,7 +499,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SSW</td>
-                        <td>78</td>
+                        <td>77</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -511,7 +511,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SSW</td>
-                        <td>85</td>
+                        <td>84</td>
                      </tr>
                   </tbody>
                </table>
@@ -632,8 +632,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "65",
-                 "78",
-                 "85"
+                 "77",
+                 "84"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 20:05:06 2018</p>
+         Last Run: Thu Nov 22 21:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -726,7 +726,7 @@
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
-                        <td>68</td>
+                        <td>69</td>
                      </tr>
                   </tbody>
                </table>
@@ -848,7 +848,7 @@
                "data":[
                  "66",
                  "67",
-                 "68"
+                 "69"
                ]
              }
            ]
