--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 21:05:06 2018</p>
+         Last Run: Thu Nov 22 22:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -38,7 +38,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>82</td>
+                        <td>80</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -46,11 +46,11 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>5</td>
-                        <td>73</td>
+                        <td>72</td>
                         <td>1</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>72</td>
+                        <td>69</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -60,9 +60,9 @@
                         <td>4</td>
                         <td>70</td>
                         <td>0</td>
-                        <td>10</td>
-                        <td>S</td>
-                        <td>59</td>
+                        <td>8</td>
+                        <td>SSE</td>
+                        <td>57</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -70,11 +70,11 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>5</td>
-                        <td>72</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>49</td>
+                        <td>47</td>
                      </tr>
                   </tbody>
                </table>
@@ -189,9 +189,9 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "78",
-                 "73",
+                 "72",
                  "70",
-                 "72"
+                 "71"
                ]
              },
              {
@@ -200,10 +200,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "82",
-                 "72",
-                 "59",
-                 "49"
+                 "80",
+                 "69",
+                 "57",
+                 "47"
                ]
              }
            ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 21:05:06 2018</p>
+         Last Run: Thu Nov 22 22:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -280,7 +280,7 @@
                         <td>2</td>
                         <td>0</td>
                         <td>2</td>
-                        <td>55</td>
+                        <td>56</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -406,7 +406,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "59",
-                 "55",
+                 "56",
                  "55"
                ]
              },
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 21:05:06 2018</p>
+         Last Run: Thu Nov 22 22:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -483,7 +483,7 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>4</td>
-                        <td>82</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSW</td>
@@ -495,7 +495,7 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>5</td>
-                        <td>85</td>
+                        <td>86</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSW</td>
@@ -507,7 +507,7 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>7</td>
-                        <td>87</td>
+                        <td>88</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSW</td>
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "82",
-                 "85",
-                 "87"
+                 "83",
+                 "86",
+                 "88"
                ]
              },
              {
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 21:05:06 2018</p>
+         Last Run: Thu Nov 22 22:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -698,18 +698,6 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>8</td>
-                        <td>87</td>
-                        <td>0</td>
-                        <td>6</td>
-                        <td>SW</td>
-                        <td>66</td>
-                     </tr>
-                     <tr>
-                        <td>10:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>-3</td>
-                        <td>-6</td>
-                        <td>8</td>
                         <td>88</td>
                         <td>0</td>
                         <td>6</td>
@@ -717,12 +705,24 @@
                         <td>67</td>
                      </tr>
                      <tr>
+                        <td>10:00 PM</td>
+                        <td>Mostly Cloudy</td>
+                        <td>-3</td>
+                        <td>-6</td>
+                        <td>8</td>
+                        <td>89</td>
+                        <td>0</td>
+                        <td>6</td>
+                        <td>SW</td>
+                        <td>68</td>
+                     </tr>
+                     <tr>
                         <td>11:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
                         <td>7</td>
-                        <td>89</td>
+                        <td>90</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "87",
                  "88",
-                 "89"
+                 "89",
+                 "90"
                ]
              },
              {
@@ -846,8 +846,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "66",
                  "67",
+                 "68",
                  "69"
                ]
              }
